assets/css/components/_buttonwall.css
/* Button wall */
.buttonwall {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  gap: 1px;
  padding: 0;
  margin: 0 0 2rem
}

.buttonwall li::marker {
  content: '';
}

.buttonwall--highcontrast .buttonwall__item a {
  background: var(--bg) !important;
  color: var(--text) !important;
  box-shadow: inset 0 0 0 1px var(--text) !important;
  text-decoration: underline !important
}

.buttonwall__image,
.buttonwall__item {
  width: 88px;
  height: 31px;
}

.buttonwall__image a,
.buttonwall__item a {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  transition: transform .4s ease;
  will-change: transform;
  backface-visibility: hidden;
}

.buttonwall__image img {
    display: block;
    width: 88px;
    height: 31px;
}

.buttonwall__item a {
  width: 80px;
  height: 31px;
  background: #fff;
  overflow: hidden;
  word-break: normal;
  padding: 0 4px;
  text-decoration: none;
  font-weight: 700;
  font-size: 12px;
  line-height: 1.1
}

.buttonwall__item a:active,
.buttonwall__item a:focus,
.buttonwall__item a:hover,
.buttonwall__image a:active,
.buttonwall__image a:focus,
.buttonwall__image a:hover {
  transform: translate(2px, 2px);
  text-decoration: none;
  z-index: 1;
}

